--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Add user</title>
+    <title>Add student</title>
 </head>
 <body>
     <form action="" method="post">
