--- a/templates/student.html
+++ b/templates/student.html
@@ -5,7 +5,7 @@
     <title>{{ user.name}} profile</title>
 </head>
 <body>
-    <strong> {{user.id}} {{ user.name}}</strong> <br>
+    <strong> [{{user.id}}] {{ user.name}}</strong> <br>
             Grades: {{ user.grades }}<br>
             Average:
 
